--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     <application
         android:name=".TwitterApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_twitter_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <meta-data
