--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     //active android
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 
+    //cardview
+    compile 'com.android.support:cardview-v7:21.0.+'
+
 }
