--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
     //cardview
     compile 'com.android.support:cardview-v7:21.0.+'
 
+    //circular image
+    compile 'de.hdodenhof:circleimageview:2.0.0'
+
 }
